[tool.poetry]
name = "beeware-tutorial"
version = "0.1.0"
description = ""
authors = ["maxfire2008 <22722054+maxfire2008@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "beeware_tutorial"}]

[tool.poetry.dependencies]
python = "^3.11"
briefcase = "^0.3.15"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
